Fix: Home Page Background Image Spacing

--- a/src/views/Home/Home.scss
+++ b/src/views/Home/Home.scss
@@ -6,11 +6,14 @@
   display: flex;
   align-items: center;
   flex-direction: column;
+  position: relative;
+  z-index: 0;
   background-color: #e3e6e6;
 
   .background-spacing {
     width: 1500px;
-    position: relative;
+    position: absolute;
+    z-index: -1;
     overflow: hidden;
 
     .home-background {
@@ -116,21 +119,19 @@
     .right-button:focus {
       box-shadow: inset 0 0 0 2px #fff, inset 0 0 0 4px #008296;
     }
+  }
 
-    .category-grid {
-      display: grid;
-      grid-template-columns: 350px 350px 350px 350px;
-      column-gap: 20px;
-      row-gap: 20px;
-      position: absolute;
-      top: 200px;
-      left: 0;
-      padding: 20px;
+  .category-grid {
+    display: grid;
+    grid-template-columns: 350px 350px 350px 350px;
+    column-gap: 20px;
+    row-gap: 20px;
+    padding: 20px;
+    margin-top: 231px;
 
-      .home-page-category {
-        height: 420px;
-        background-color: #ffffff;
-      }
+    .home-page-category {
+      height: 420px;
+      background-color: #ffffff;
     }
   }
 }
